Fix signup overflow again

--- a/static/scss/_custom.scss
+++ b/static/scss/_custom.scss
@@ -800,7 +800,7 @@ article.media {
   & .media-content {
     overflow: inherit;
 
-    & .comment-wrapper {
+    & .overflow-hidden {
       overflow: hidden;
     }
 
